# opengriffin

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  JOURNEY.md  README.md  SECURITY.md  cancel.html  index.html  privacy.html  pyproject.toml  success.html  terms.html  topup-success.html  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  repo-settings-cheatsheet.md
.github/workflows/: ci.yml
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/icons/: github.tsx
apps/web/src/components/motion/: scroll-reveal.tsx
apps/web/src/components/sections/: cta.tsx  faq.tsx  features.tsx  footer.tsx  hero.tsx  install.tsx  migration.tsx  nav.tsx  providers.tsx  why.tsx
apps/web/src/components/ui/: button.tsx
apps/web/src/lib/: data.ts
docs/: frontier.md  index.md  memory.md  migration.md
examples/: jobs.json
opengriffin/: .env.example  README.md  index.html  package.json
opengriffin/src/: agents.js  analytics.js  billing.js  cleanup.js  index.js  llm-router.js  media.js  memory.js  plans.js  provision.js  scheduler.js  test-flow.js  tools.js
src/: index.js  scheduler.js  setup-db.js  test-flow.js
src/opengriffin/: a2a.py  adversarial.py  aliases.py  approvals.py  attest.py  bot.py  botctx.py  capabilities.py  causal.py  checkpoints.py  cli.py  constraints.py  critic.py  cron.py  deadman.py  dream.py  drift.py  echo_memory.py  gen_ui.py  genealogy.py  identity.py  kanban.py  marketplace.py  memory.py  mesa.py  migrate.py  observe.py  paths.py  pods.py  predictive.py  progress.py  proofs.py  quorum.py  recall.py  redact.py  replay.py  reputation.py  routing.py  security_scan.py  self_healing.py  (+17 more)
src/opengriffin/dashboard/: server.py
src/opengriffin/gateways/: __init__.py  discord.py  email.py  imessage.py  matrix.py  signal.py  slack.py
src/opengriffin/providers/: __init__.py  bedrock.py  claude.py  cohere.py  gemini.py  ollama.py  openai_compatible.py
tests/: test_capabilities.py  test_frontier_modules.py  test_redact.py
website/: legacy.html
